--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>KG4Vis: A Knowledge Graph-Based Approach for Visualization Recommendation</title>
