--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             <h3>Materials</h3>
                             <div class="materials">
                                 <a href="https://haotian-li.com/paper/kg4vis.pdf" class="link" target="_blank">PDF</a>
-                                | <a href="" class="link" target="_blank">Preprint</a>
+                                | <a href="https://arxiv.org/abs/2107.12548" class="link" target="_blank">Preprint</a>
                                 | <a href="https://github.com/KG4VIS/Knowledge-Graph-4-VIS-Recommendation" class="link" target="_blank">GitHub</a>
                                 | <a href="./files/kg4vis_supple.pdf" class="link" target="_blank">Supplementary</a>
                                 | <a href="https://kg4vis.s3.us-east-2.amazonaws.com/corpus.zip" class="link" target="_blank">Corpus</a>
