--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                         <div id="materials">
                             <h3>Materials</h3>
                             <div class="materials">
-                                <a href="https://haotian-li.com/paper/kg4vis.pdf" class="link" target="_blank">PDF</a>
-                                | <a href="https://arxiv.org/abs/2107.12548" class="link" target="_blank">Preprint</a>
+                                <a href="https://arxiv.org/pdf/2107.12548.pdf" class="link" target="_blank">PDF</a>
                                 | <a href="https://github.com/KG4VIS/Knowledge-Graph-4-VIS-Recommendation" class="link" target="_blank">GitHub</a>
                                 | <a href="./files/kg4vis_supple.pdf" class="link" target="_blank">Supplementary</a>
+                                | <a href="./files/kg4vis_poster.pdf" class="link" target="_blank">Poster</a>
                                 | <a href="https://kg4vis.s3.us-east-2.amazonaws.com/corpus.zip" class="link" target="_blank">Corpus</a>
                                 | <a href="https://kg4vis.s3.us-east-2.amazonaws.com/feature.zip" class="link" target="_blank">Features</a>
                             </div>
@@ -46,6 +46,11 @@
                         <div id="publication">
                             <h3>Publication</h3>
                             <p>Haotian Li, Yong Wang, Songheng Zhang, Yangqiu Song and Huamin Qu. 2021. KG4Vis: A Knowledge Graph-Based Approach for Visualization Recommendation. IEEE Transactions on Visualization and Computer Graphics (Proceedings of IEEE VIS 2021). To Appear.</p>
+                        </div>
+                        <div id="acknowledgements">
+                            <h3>Acknowledgements</h3>
+                            <p>This research was supported by the Singapore Ministry of Education (MOE) Academic Research Fund (AcRF) Tier 1 grant (Grant number: 20-C220-SMU-011). We would like to thank the experts in our expert interviews and anonymous reviewers for their feedback. We also would like to thank <a href="http://kzh.space/" class="link" target="_blank">Dr. Kevin Hu</a> for granting us the permission of using and open-sourcing the code and dataset in <a href="https://vizml.media.mit.edu/" class="link" target="_blank">VizML</a>, and <a href="https://yz-cai.github.io/" class="link" target="_blank">Mr. Yuzheng Cai</a> for making the original version of the amazing poster in <a href="http://simingchen.me/" class="link" target="_blank">Dr. Siming Chen</a>'s visualization course in Fudan University.
+                            </p>
                         </div>
                     </div>
                 </div>
